* Added ZFS snapshots.
* Added BTRFS snapshots.
* Added mounting of OtherFS snapshots in a .snapshots directory under the
  file system.
* Added automatic creation of pre-existing Nagios services for existing
  volumes during oaconfig install.
* Fixed mountpoints not being deleted when volumes are unmounted.
* Added volume clone API.
* Added ZVol API.

Version 1.1.1, 01 April 2014:
---------------------------------

* Fixed Volume Management refresh to also refresh the root objects.
* Fixed exception caused by querying an LV that has not yet been fully created.
* Fixed LVM VG detection (detected VGs did not show up in the GUI).
* Fixed DRBD mirror plugin for the Volume Options GUI.

Version 1.1.0, 09 March 2014:
---------------------------------
* Improved Nagios disk load graphs.
* Added support for scheduled snapshots.
* Added Host and HostGroup management.
* Added support for querying file systems mounted on remote hosts.
* Removed support for IETD.
* Added support for LIO (linux-iscsi.org).
* Added multithreading support to the RPCd.
* Added fancy Nagios service notifications.
* Added Host Attributes mechanism.
* Added volume abstraction layer.
* Updated ExtJS to version 4, yielding various GUI improvements.
* Added support for SINGLE RAID units.
* Added app for MD-RAID.
* Refactored file system handlers.
* Added support for deferred function execution to the systemd.
* Added DRBD module.
* Added function to automatically wipe old metadata from newly created volumes.
* Added auto-create function for PeerHost and APIKey entries.


Version 1.0.7, 22 May 2013:
---------------------------------

* Replaced SSMTP module with mailaliases module.
* Added double-click edit feature to most grid panels.
* Added Cron module.
* Added LV resize feature.
* Improved internationalization support.
* Added check_diskstats Nagios plugin that measures disk performance.
* Improved File System abstraction API.
* Added IPMI sensors module.
* Added oavgmanager CLI tool.