@@ -14,6 +14,7 @@ Version 1.1.2, ?? ????? 2014:
 * Fixed mountpoints not being deleted when volumes are unmounted.
 * Added volume clone API.
 * Added ZVol API.
+* Fixed RPCd causing mayhem by not properly closing database connections.
 
 Version 1.1.1, 01 April 2014:
 ---------------------------------
